Header not fixed on mobile

--- a/themes/dsq/style.less
+++ b/themes/dsq/style.less
@@ -268,6 +268,23 @@ blockquote
 	}
 }
 
+/* Register Button */
+.dsq-register
+{
+	background: transparent url('images/register-bg.png') top center no-repeat;
+	min-width: 110px;
+	height: 81px;
+	color: @white;
+	text-decoration: none;
+	padding: 1.6em 2em 0 0;
+	font-weight: 400;
+	text-transform: uppercase;
+	text-align: center;
+	margin-left: 30px;
+
+	display: block;
+}
+
 /* Footer */
 #content-bottom
 {
@@ -311,6 +328,14 @@ blockquote
 #container
 {
 	padding: 1em;
+}
+
+@media only screen 
+and (max-width : 767px) {
+	.column
+	{
+		width: 100% !important;
+	}
 }
 
 /* Breakpoints */
